[workspace]
members = [
    "jruby_executable",
    "ruby_executable",
    "shared",
]

[workspace.dependencies]
java-properties = "2.0.0"
glob = "0.3.1"
clap = { version = "4.5.4", features = ["derive"] }
shared = { path = "shared" }
indoc = "2.0.5"
lazy_static = "1.4.0"
flate2 = "1.0.30"
fs-err = "2.11.0"
fun_run = "0.2.0"
nom = "7.1.3"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
tar = "0.4.40"
tempfile = "3.10.1"
thiserror = "1.0.61"
bullet_stream = "0.2.0"
sha2 = "0.10"
toml = "0.8"
chrono = {version = "0.4", features = ["serde"] }
serde = {version = "1.0", features = ["derive"] }
rayon = "1.10"
hex = "0.4.3"
gem_version = "0.3"
libherokubuildpack = { version = "0.24.0", default-features = false, features = ["inventory", "inventory-sha2"] }

# File locking (FLOCK)
fs2 = "0.4"

pretty_assertions = "1.4.1"
