[workspace]
resolver = "3"
members = [
    "jruby_executable",
    "ruby_executable",
    "shared",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
bullet_stream = "0.11"
chrono = {version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
fs-err = { version = "3", features = ["debug"] }
fs2 = "0.4"
fun_run = "0.6"
gem_version = "0.3"
glob = "0.3"
hex = "0.4"
indoc = "2"
java-properties = "2"
lazy_static = "1"
libherokubuildpack = { version = "0.24.0", default-features = false, features = ["inventory", "inventory-sha2"] }
nom = "7"
pretty_assertions = "1"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = {version = "1", features = ["derive"] }
sha2 = "0.10"
shared = { path = "shared" }
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "0.9"
