[package]
name = "jruby_executable"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "jruby_build"
path = "src/bin/jruby_build.rs"

[[bin]]
name = "jruby_check"
path = "src/bin/jruby_check.rs"

[[bin]]
name = "jruby_changelog"
path = "src/bin/jruby_changelog.rs"

[[bin]]
name = "jruby_release_check"
path = "src/bin/jruby_release_check.rs"

[dependencies]
bullet_stream = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
fs-err = { workspace = true }
fun_run = { workspace = true }
gem_version = { workspace = true }
glob = { workspace = true }
indoc = { workspace = true }
java-properties = { workspace = true }
lazy_static = { workspace = true }
libherokubuildpack = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
