[package]
name = "ruby_executable"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true}
inside_docker = { workspace = true}
indoc = { workspace = true}
lazy_static = { workspace = true}
flate2 = { workspace = true}
fs-err = { workspace = true}
fun_run = { workspace = true}
nom = { workspace = true}
regex = { workspace = true}
reqwest = { workspace = true}
tar = { workspace = true}
tempfile = { workspace = true}
thiserror = { workspace = true}
bullet_stream = { workspace = true }
