[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inventory_check"
path = "src/bin/inventory_check.rs"

[dependencies]
glob = { workspace = true}
clap = { workspace = true}
indoc = { workspace = true}
flate2 = { workspace = true}
fs-err = { workspace = true}
fun_run = { workspace = true}
nom = { workspace = true}
regex = { workspace = true}
reqwest = { workspace = true}
tar = { workspace = true}
tempfile = { workspace = true}
thiserror = { workspace = true}
bullet_stream = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
libherokubuildpack = { workspace = true }
fs2 = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }
gem_version = { workspace = true }


[dev-dependencies]
tiny_http = "0.12.0"
indoc = "2.0.5"
